--- a/zib2020-to-map.ipynb
+++ b/zib2020-to-map.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        " 'Nl.zorg.Procedure-v5.2(2020EN).xlsx']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\marcd\\Anaconda3\\envs\\fhir\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "C:\\Users\\edelman_nict1\\AppData\\Roaming\\Python\\Python313\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
     },
@@ -407,7 +407,7 @@
        "9                                                NaN          NaN  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,9 +721,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fhir",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "fhir"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -735,9 +735,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
