Update HealthProfessional mapping regarding the role

--- a/mapping.ipynb
+++ b/mapping.ipynb
@@ -597,7 +597,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>EHDSHealthProfessional.role</td>\n",
-       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -614,6 +614,11 @@
        "      <td>NaN</td>\n",
        "      <td>HealthProfessional.Gender</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -629,6 +634,7 @@
        "6  EHDSHealthProfessional.organization   \n",
        "7     EHDSHealthProfessional.specialty   \n",
        "8                                  NaN   \n",
+       "9                                  NaN   \n",
        "\n",
        "                                                 zib  \n",
        "0                                 HealthProfessional  \n",
@@ -636,10 +642,11 @@
        "2                 HealthProfessional.NameInformation  \n",
        "3              HealthProfessional.AddressInformation  \n",
        "4              HealthProfessional.ContactInformation  \n",
-       "5          HealthProfessional.HealthProfessionalRole  \n",
+       "5                                                NaN  \n",
        "6              HealthProfessional.HealthcareProvider  \n",
        "7                       HealthProfessional.Specialty  \n",
-       "8                          HealthProfessional.Gender  "
+       "8                          HealthProfessional.Gender  \n",
+       "9          HealthProfessional.HealthProfessionalRole  "
       ]
      },
      "execution_count": 7,
@@ -811,15 +818,15 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>EHDSHealthProfessional.role</td>\n",
-       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
-       "      <td>HealthProfessionalRole</td>\n",
-       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
-       "      <td>NL: ZorgverlenerRol</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0..1</td>\n",
-       "      <td>data</td>\n",
-       "      <td>NL-CM:17.1.5</td>\n",
-       "      <td>The role the health professional fulfils in th...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>EHDSHealthProfessional.role</td>\n",
        "      <td>EHDSHealthProfessional.role</td>\n",
@@ -892,6 +899,27 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
+       "      <td>HealthProfessionalRole</td>\n",
+       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
+       "      <td>NL: ZorgverlenerRol</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>0..1</td>\n",
+       "      <td>data</td>\n",
+       "      <td>NL-CM:17.1.5</td>\n",
+       "      <td>The role the health professional fulfils in th...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -907,6 +935,7 @@
        "6     EHDSHealthProfessional.specialty   \n",
        "7       EHDSHealthProfessional.telecom   \n",
        "8                                  NaN   \n",
+       "9                                  NaN   \n",
        "\n",
        "                                                 zib  \\\n",
        "0                                 HealthProfessional   \n",
@@ -914,10 +943,11 @@
        "2  HealthProfessional.HealthProfessionalIdentific...   \n",
        "3                 HealthProfessional.NameInformation   \n",
        "4              HealthProfessional.HealthcareProvider   \n",
-       "5          HealthProfessional.HealthProfessionalRole   \n",
+       "5                                                NaN   \n",
        "6                       HealthProfessional.Specialty   \n",
        "7              HealthProfessional.ContactInformation   \n",
        "8                          HealthProfessional.Gender   \n",
+       "9          HealthProfessional.HealthProfessionalRole   \n",
        "\n",
        "                                 name_zib  \\\n",
        "0                      HealthProfessional   \n",
@@ -925,10 +955,11 @@
        "2  HealthProfessionalIdentificationNumber   \n",
        "3                         NameInformation   \n",
        "4                      HealthcareProvider   \n",
-       "5                  HealthProfessionalRole   \n",
+       "5                                     NaN   \n",
        "6                               Specialty   \n",
        "7                      ContactInformation   \n",
        "8                                  Gender   \n",
+       "9                  HealthProfessionalRole   \n",
        "\n",
        "                                            path_zib  \\\n",
        "0                                 HealthProfessional   \n",
@@ -936,10 +967,11 @@
        "2  HealthProfessional.HealthProfessionalIdentific...   \n",
        "3                 HealthProfessional.NameInformation   \n",
        "4              HealthProfessional.HealthcareProvider   \n",
-       "5          HealthProfessional.HealthProfessionalRole   \n",
+       "5                                                NaN   \n",
        "6                       HealthProfessional.Specialty   \n",
        "7              HealthProfessional.ContactInformation   \n",
        "8                          HealthProfessional.Gender   \n",
+       "9          HealthProfessional.HealthProfessionalRole   \n",
        "\n",
        "                             alias_zib type_zib card._zib     stereotype_zib  \\\n",
        "0                     NL: Zorgverlener      NaN       NaN        rootconcept   \n",
@@ -947,10 +979,11 @@
        "2  NL: ZorgverlenerIdentificatienummer       II      0..*               data   \n",
        "3                     NL: Naamgegevens      NaN      0..1     data,reference   \n",
        "4                    NL: Zorgaanbieder      NaN      0..1  context,reference   \n",
-       "5                  NL: ZorgverlenerRol       CD      0..1               data   \n",
+       "5                                  NaN      NaN       NaN                NaN   \n",
        "6                      NL: Specialisme       CD      0..1               data   \n",
        "7                  NL: Contactgegevens      NaN      0..1     data,reference   \n",
        "8                         NL: Geslacht       CD      0..1               data   \n",
+       "9                  NL: ZorgverlenerRol       CD      0..1               data   \n",
        "\n",
        "         id_zib                                     definition_zib  \\\n",
        "0  NL-CM:17.1.1  Root concept of the HealthProfessional informa...   \n",
@@ -958,10 +991,11 @@
        "2  NL-CM:17.1.2  The health professional identification number ...   \n",
        "3  NL-CM:17.1.3  Health professional’s full name. If a health p...   \n",
        "4  NL-CM:17.1.6  The organization the health professional works...   \n",
-       "5  NL-CM:17.1.5  The role the health professional fulfils in th...   \n",
+       "5           NaN                                                NaN   \n",
        "6  NL-CM:17.1.4  Health professional’s medical specialty. This ...   \n",
        "7  NL-CM:17.1.8  Health professional’s telephone number(s) or e...   \n",
        "8  NL-CM:17.1.9       Health professional’s administrative gender.   \n",
+       "9  NL-CM:17.1.5  The role the health professional fulfils in th...   \n",
        "\n",
        "                             definitioncode_zib  \\\n",
        "0  SNOMED CT: 223366009 Healthcare professional   \n",
@@ -973,6 +1007,7 @@
        "6       SNOMED CT: 394658006 Clinical specialty   \n",
        "7                                           NaN   \n",
        "8                                           NaN   \n",
+       "9                                           NaN   \n",
        "\n",
        "                              id_xtehr                           path_xtehr  \\\n",
        "0               EHDSHealthProfessional               EHDSHealthProfessional   \n",
@@ -984,6 +1019,7 @@
        "6     EHDSHealthProfessional.specialty     EHDSHealthProfessional.specialty   \n",
        "7       EHDSHealthProfessional.telecom       EHDSHealthProfessional.telecom   \n",
        "8                                  NaN                                  NaN   \n",
+       "9                                  NaN                                  NaN   \n",
        "\n",
        "                                         short_xtehr  \\\n",
        "0                          Health professional model   \n",
@@ -995,6 +1031,7 @@
        "6  The specialty of a practitioner that describes...   \n",
        "7  Telecommunication contact information (address...   \n",
        "8                                                NaN   \n",
+       "9                                                NaN   \n",
        "\n",
        "                                    definition_xtehr        type_xtehr  \\\n",
        "0  EHDS refined base model for Health professiona...               NaN   \n",
@@ -1006,6 +1043,7 @@
        "6  The specialty of a practitioner that describes...   CodeableConcept   \n",
        "7  Telecommunication contact information (address...       EHDSTelecom   \n",
        "8                                                NaN               NaN   \n",
+       "9                                                NaN               NaN   \n",
        "\n",
        "  card._xtehr                                      binding_xtehr  \n",
        "0        0..*                                                NaN  \n",
@@ -1016,7 +1054,8 @@
        "5        0..*  {'strength': 'preferred', 'description': 'ISCO...  \n",
        "6        0..*                                                NaN  \n",
        "7        0..*                                                NaN  \n",
-       "8         NaN                                                NaN  "
+       "8         NaN                                                NaN  \n",
+       "9         NaN                                                NaN  "
       ]
      },
      "execution_count": 8,
@@ -1111,11 +1150,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>EHDSHealthProfessional.role</td>\n",
-       "      <td>CD</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>CodeableConcept</td>\n",
-       "      <td>0..1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0..*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1145,6 +1184,15 @@
        "      <td>0..1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>HealthProfessional.HealthProfessionalRole</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0..1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1156,10 +1204,11 @@
        "2  HealthProfessional.HealthProfessionalIdentific...   \n",
        "3                 HealthProfessional.NameInformation   \n",
        "4              HealthProfessional.HealthcareProvider   \n",
-       "5          HealthProfessional.HealthProfessionalRole   \n",
+       "5                                                NaN   \n",
        "6                       HealthProfessional.Specialty   \n",
        "7              HealthProfessional.ContactInformation   \n",
        "8                          HealthProfessional.Gender   \n",
+       "9          HealthProfessional.HealthProfessionalRole   \n",
        "\n",
        "                                 xtehr type_zib        type_xtehr card._zib  \\\n",
        "0               EHDSHealthProfessional      NaN               NaN       NaN   \n",
@@ -1167,10 +1216,11 @@
        "2    EHDSHealthProfessional.identifier       II        Identifier      0..*   \n",
        "3          EHDSHealthProfessional.name      NaN     EHDSHumanName      0..1   \n",
        "4  EHDSHealthProfessional.organization      NaN  EHDSOrganization      0..1   \n",
-       "5          EHDSHealthProfessional.role       CD   CodeableConcept      0..1   \n",
+       "5          EHDSHealthProfessional.role      NaN   CodeableConcept       NaN   \n",
        "6     EHDSHealthProfessional.specialty       CD   CodeableConcept      0..1   \n",
        "7       EHDSHealthProfessional.telecom      NaN       EHDSTelecom      0..1   \n",
        "8                                  NaN       CD               NaN      0..1   \n",
+       "9                                  NaN       CD               NaN      0..1   \n",
        "\n",
        "  card._xtehr  \n",
        "0        0..*  \n",
@@ -1181,7 +1231,8 @@
        "5        0..*  \n",
        "6        0..*  \n",
        "7        0..*  \n",
-       "8         NaN  "
+       "8         NaN  \n",
+       "9         NaN  "
       ]
      },
      "execution_count": 9,
