--- a/profiles/comparison.ipynb
+++ b/profiles/comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 1,
    "id": "67ce8af7-a4ee-4e2a-9569-8eabb2036a14",
    "metadata": {},
    "outputs": [],
@@ -26,62 +26,30 @@
     "        # Fish out interesting data: min and max cardinality and binding strengths\n",
     "        self.of_interest = [el[\"path\"] for el in content[\"differential\"][\"element\"] if \"min\" in el or \"max\" in el or \"binding\" in el or \"type\" in el]\n",
     "\n",
-    "    def fits_in(self, other, *ignored):\n",
+    "    def fits_in(self, other, ignored):\n",
     "        self_snap = self._open(self)[\"snapshot\"][\"element\"]\n",
     "        other_snap = self._open(other)[\"snapshot\"][\"element\"]\n",
     "\n",
     "        self.findings = []\n",
-    "        self.ignored = ignored\n",
+    "        try:\n",
+    "            with open(ignored) as f:\n",
+    "                self.ignored = json.load(f)[f\"{self.name} ({self.package}) fits in {other.name} ({other.package})\"]\n",
+    "        except KeyError:\n",
+    "            self.ignored = {}\n",
     "        \n",
     "        # If we want to know if we \"fit in\" the other, we have to look at the restrictions done by the other and see\n",
     "        # if we're compatible. We don't need to look at our own restrictions\n",
-    "        for path in other.of_interest:\n",
+    "        for self.path in other.of_interest:\n",
     "            try:\n",
-    "                self_el = list(filter(lambda e: e[\"path\"] == path, self_snap))[0]\n",
-    "                other_el = list(filter(lambda e: e[\"path\"] == path, other_snap))[0]\n",
+    "                self_el = list(filter(lambda e: e[\"path\"] == self.path, self_snap))[0]\n",
+    "                other_el = list(filter(lambda e: e[\"path\"] == self.path, other_snap))[0]\n",
     "            except IndexError:\n",
     "                # Happens when we have extensions. Need to look into this\n",
     "                continue\n",
     "\n",
-    "            if other_el[\"min\"] > self_el[\"min\"]:\n",
-    "                self._finding(path, f\"required in {other.name} but optional in {self.name}.\")\n",
-    "\n",
-    "            if other_el[\"max\"] != \"*\": # if other is unrestricted we always fit\n",
-    "                if self_el[\"max\"] == \"*\":\n",
-    "                     self._finding(path, f\"restricted to {other_el[\"max\"]} in {other.name} but unrestricted in {self.name}.\")\n",
-    "                else:\n",
-    "                    self_max = int(self_el[\"max\"])\n",
-    "                    other_max = int(other_el[\"max\"])\n",
-    "                    if self_max > other_max:\n",
-    "                        self._finding(path, f\"restricted to {other_max} in {other.name} but to {self_max} in {self.name}.\")\n",
-    "\n",
-    "            if \"binding\" in other_el:\n",
-    "                self_vs = self._getBoundValueSet(self_el)\n",
-    "                other_vs = self._getBoundValueSet(other_el)\n",
-    "                if other_el[\"binding\"][\"strength\"] == \"required\":\n",
-    "                    if self_vs != other_vs:\n",
-    "                        self._finding(path, f\"required Valueset in {other.name} differs from {self.name}. Manual check needed.\", \"manual\")\n",
-    "                    elif self_el[\"binding\"][\"strength\"] != \"required\":\n",
-    "                        self._finding(path, f\"required binding in {other.name} is more restrictive than {self_el[\"binding\"][\"strength\"]} binding in {self.name}.\")\n",
-    "                elif other_el[\"binding\"][\"strength\"] == \"extensible\":\n",
-    "                    if self_vs != other_vs:\n",
-    "                        self._finding(path, f\"required Valueset in {other.name} differs from {self.name}. Manual check needed.\", \"manual\")\n",
-    "                    elif self_el[\"binding\"][\"strength\"] not in [\"extensbile\", \"required\"]:\n",
-    "                        self._finding(path, f\"extensible ValueSet in {other.name} is more restrictive than {self_el[\"binding\"][\"strength\"]} binding in {self.name}.\")\n",
-    "                else:\n",
-    "                    if self_vs != other_vs:\n",
-    "                        self._finding(path, \"differences in Valueset preferences. Manual check needed.\", \"manual\")\n",
-    "                    else:\n",
-    "                        # We don't care much about other differences\n",
-    "                        pass\n",
-    "\n",
-    "            if \"type\" in other_el:\n",
-    "                self_types = {t[\"code\"] for t in self_el[\"type\"] if \"code\" in t}\n",
-    "                other_types = {t[\"code\"] for t in other_el[\"type\"] if \"code\" in t}\n",
-    "                if self_types > other_types:\n",
-    "                    self._finding(path, f\"{other.name} restricts types to {other_types}, which is narrower than the allowed types in {self.name}.\")\n",
-    "                elif self_types.isdisjoint(other_types):\n",
-    "                    self._finding(path, f\"{other.name} restricts types to {other_types}, while {self.name} restricts them to {self_types}.\")\n",
+    "            self._checkMinMax(self_el, other_el, other.name)\n",
+    "            self._checkBinding(self_el, other_el, other.name)\n",
+    "            self._checkTypes(self_el, other_el, other.name)\n",
     "\n",
     "        result = []\n",
     "        if len(self.findings):\n",
@@ -91,6 +59,70 @@
     "        else:\n",
     "            result.append(f\":white_check_mark: {self.name} ({self.package}) does seem to fit in {other.name} ({other.package}).\")\n",
     "        return result\n",
+    "\n",
+    "    def _checkMinMax(self, self_el, other_el, other_name):\n",
+    "        if other_el[\"min\"] > self_el[\"min\"]:\n",
+    "            self._finding(f\"required in {other_name} but optional in {self.name}.\")\n",
+    "\n",
+    "        if other_el[\"max\"] != \"*\": # if other is unrestricted we always fit\n",
+    "            if self_el[\"max\"] == \"*\":\n",
+    "                 self._finding(f\"restricted to {other_el[\"max\"]} in {other_name} but unrestricted in {self.name}.\")\n",
+    "            else:\n",
+    "                self_max = int(self_el[\"max\"])\n",
+    "                other_max = int(other_el[\"max\"])\n",
+    "                if self_max > other_max:\n",
+    "                    self._finding(f\"restricted to {other_max} in {other_name} but to {self_max} in {self.name}.\")\n",
+    "\n",
+    "    def _checkBinding(self, self_el, other_el, other_name):\n",
+    "        if \"binding\" in other_el:\n",
+    "            self_vs = self._getBoundValueSet(self_el)\n",
+    "            other_vs = self._getBoundValueSet(other_el)\n",
+    "\n",
+    "            if self.path in self.ignored:\n",
+    "                if \"valueSet\" in self.ignored[self.path]:\n",
+    "                    known_self = self.ignored[self.path][\"valueSet\"][\"self\"]\n",
+    "                    known_other = self.ignored[self.path][\"valueSet\"][\"other\"]\n",
+    "                    if known_self == self_vs and known_other == other_vs:\n",
+    "                        if \"comment\" in self.ignored[self.path][\"valueSet\"]:\n",
+    "                            self._finding(self.ignored[self.path][\"valueSet\"][\"comment\"], \"checked\")\n",
+    "                        # We don't have to flag on ValueSet differences anymore, but still on binding strengths, so we\n",
+    "                        # simply set both ValueSets to empty\n",
+    "                        self_vs = other_vs = \"\"\n",
+    "\n",
+    "            if self_vs != other_vs:\n",
+    "                if other_el[\"binding\"][\"strength\"] == \"required\":\n",
+    "                    self._finding(f\"required Valueset in {other_name} differs from {self.name}. Manual check needed.\", \"manual\")\n",
+    "                elif other_el[\"binding\"][\"strength\"] == \"extensible\":\n",
+    "                    self._finding(f\"extensible Valueset in {other_name} differs from {self.name}. Manual check needed.\", \"manual\")\n",
+    "                else:\n",
+    "                    self._finding(\"differences in Valueset preferences. Manual check needed.\", \"manual\")\n",
+    "            else:\n",
+    "                if other_el[\"binding\"][\"strength\"] == \"required\" and self_el[\"binding\"][\"strength\"] != \"required\":\n",
+    "                    self._finding(f\"required binding in {other_name} is more restrictive than {self_el[\"binding\"][\"strength\"]} binding in {self.name}.\")\n",
+    "                elif other_el[\"binding\"][\"strength\"] == \"extensible\" and self_el[\"binding\"][\"strength\"] not in [\"extensbile\", \"required\"]:\n",
+    "                    self._finding(path, f\"extensible ValueSet in {other_name} is more restrictive than {self_el[\"binding\"][\"strength\"]} binding in {self.name}.\")\n",
+    "                else:\n",
+    "                    # We don't care much about other differences\n",
+    "                    pass\n",
+    "\n",
+    "    def _checkTypes(self, self_el, other_el, other_name):\n",
+    "        if \"type\" in other_el:\n",
+    "            self_types = {t[\"code\"] for t in self_el[\"type\"] if \"code\" in t}\n",
+    "            other_types = {t[\"code\"] for t in other_el[\"type\"] if \"code\" in t}\n",
+    "\n",
+    "            try:\n",
+    "                known_self = set(self.ignored[self.path][\"type\"][\"self\"])\n",
+    "                known_other = set(self.ignored[self.path][\"type\"][\"other\"])\n",
+    "                if known_self == self_types and known_other == other_types:\n",
+    "                    return\n",
+    "            except KeyError:\n",
+    "                # Nothing in ignored issues about this, let's continue\n",
+    "                pass\n",
+    "\n",
+    "            if self_types > other_types:\n",
+    "                self._finding(f\"{other_name} restricts types to {other_types}, which is narrower than the allowed types in {self.name}.\")\n",
+    "            elif self_types.isdisjoint(other_types):\n",
+    "                self._finding(f\"{other_name} restricts types to {other_types}, while {self.name} restricts them to {self_types}.\")\n",
     "\n",
     "    def _open(self, profile):\n",
     "        if profile.package == \"ips\":\n",
@@ -104,22 +136,26 @@
     "        return content\n",
     "\n",
     "    def _getBoundValueSet(self, snapshot_element):\n",
+    "        vs = None\n",
     "        if \"valueSetReference\" in snapshot_element[\"binding\"]:\n",
-    "            return snapshot_element[\"binding\"][\"valueSetReference\"][\"reference\"]\n",
-    "        return snapshot_element[\"binding\"][\"valueSet\"]\n",
+    "            vs = snapshot_element[\"binding\"][\"valueSetReference\"][\"reference\"]\n",
+    "        else:\n",
+    "            vs = snapshot_element[\"binding\"][\"valueSet\"]\n",
+    "        return vs.split(\"|\")[0] # Cut of version number\n",
     "\n",
-    "    def _finding(self, path, message, severity = \"error\"):\n",
-    "        if path not in self.ignored:\n",
-    "            if severity == \"manual\":\n",
-    "                symbol = \":interrobang:\"\n",
-    "            else:\n",
-    "                symbol = \":x:\"\n",
-    "            self.findings.append(f\"{symbol} {path}: {message}\")\n"
+    "    def _finding(self, message, severity = \"error\"):\n",
+    "        if severity == \"checked\":\n",
+    "            symbol = \":white_check_mark:\"\n",
+    "        elif severity == \"manual\":\n",
+    "            symbol = \":interrobang:\"\n",
+    "        else:\n",
+    "            symbol = \":x:\"\n",
+    "        self.findings.append(f\"{symbol} {self.path}: {message}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 2,
    "id": "51e19962-6ce4-4414-b5be-053b0153b023",
    "metadata": {},
    "outputs": [],
@@ -133,31 +169,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 3,
    "id": "92d53edc-8f82-4993-9c6a-eed58a619339",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ignored_file = pathlib.Path(\".\") / \"suppressed-issues.json\"\n",
+    "\n",
     "zib_Problem2017 = Profile(\"zib2017\", \"zib-Problem\")\n",
     "zib_Problem2020 = Profile(\"zib2020\", \"zib-Problem\")\n",
     "Condition_uv_ips = Profile(\"ips\", \"Condition-uv-ips\")\n",
     "with open(pathlib.Path(\".\") / \"results\" / \"Condition.md\", \"w\") as f:\n",
     "    write(f, \"# Condition resources\")\n",
     "    write(f, \"## zib-Problem (2017) <-> Condition-uv-ips\")\n",
-    "    write(f, *zib_Problem2017.fits_in(Condition_uv_ips))\n",
+    "    write(f, *zib_Problem2017.fits_in(Condition_uv_ips, ignored_file))\n",
     "    write(f)\n",
-    "    write(f, *Condition_uv_ips.fits_in(zib_Problem2017))\n",
+    "    write(f, *Condition_uv_ips.fits_in(zib_Problem2017, ignored_file))\n",
     "    write(f)\n",
     "    write(f, \"## zib-Problem (2020) <-> Condition-uv-ips\")\n",
-    "    write(f, *zib_Problem2020.fits_in(Condition_uv_ips))\n",
+    "    write(f, *zib_Problem2020.fits_in(Condition_uv_ips, ignored_file))\n",
     "    write(f)\n",
-    "    write(f, *Condition_uv_ips.fits_in(zib_Problem2020))"
+    "    write(f, *Condition_uv_ips.fits_in(zib_Problem2020, ignored_file))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22b884b0-2228-4177-9764-bf1691d45145",
+   "id": "aa3d6616-cf14-466b-95ad-1e5dd75f2b4d",
    "metadata": {},
    "outputs": [],
    "source": []
